crates/glyph-cli/tests/corpus/invalid/imports/import_private.glyph
import "./lib_with_private.glyph" { private_text }

skill main()
    description: "Main."
    require private_text
    flow:
        "Do something."
